--- a/_data/players.yml
+++ b/_data/players.yml
@@ -1,8 +1,45 @@
 # List of Players
 
 -
-  fname: Bill
-  lname: 
-  bio: likes games
-  events: [ 2014-06, 2015-06]
+  fname: Ben
+  lname: Willey
 
+-
+  fname: Brian
+  lname: Green
+
+-
+  fname: David
+  lname: Overton
+
+-
+  fname: Jake
+  lname: Guadnola
+
+-
+  fname: Jeff
+  lname: Barber
+
+-
+  fname: Joe
+  lname: Romano
+
+-
+  fname: John
+  lname: Weir
+
+-
+  fname: Ryan
+  lname: Dicks
+
+-
+  fname: Zach
+  lname: Hansen
+
+-
+  fname: Bill
+  lname: Wellington
+
+-
+  fname: Charles
+  lname: Wilcoxen
