setting up framse as a collection
Signed-off-by: W. S. Wellington <bill@wellingtonnet.net>

--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,11 @@ timezone: America/Los_Angeles
 
 # Build settings
 markdown: kramdown
+
+collections:
+  frames:
+    output: true
+    permalink: /game:game/frame:frame
+    defaults:
+      values:
+        layout: frame
