final collection fixes
Signed-off-by: W. S. Wellington <bill@wellingtonnet.net>

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ markdown: kramdown
 collections:
   frames:
     output: true
-    permalink: /game:game/frame:frame
+    permalink: /:path/
     defaults:
       values:
         layout: frame
