some sample data
Signed-off-by: W. S. Wellington <bill@wellingtonnet.net>

--- a/_data/frames.yml
+++ b/_data/frames.yml
@@ -1,7 +1,10 @@
 -
-  key: 1.1
-  name: 
-  
--
-  key: 1.2
-  name: 
+  summary: "TESTTEST123"
+  description:
+  start-time:
+  end-time:
+  timestamp:
+  created:   
+  modified:
+  uid: 
+ 
