--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,9 @@ timezone: America/Los_Angeles
 #github_username:  jekyll
 
 # Build settings
-markdown: kramdown
+markdown: redcarpet
+redcarpet:
+  extensions: [tables, no_intra_emphasis, autolink]
 
 collections:
   frames:
