creating a space to hold ideas for other strike club events
Signed-off-by: W. S. Wellington <bill@wellingtonnet.net>

--- a/_config.yml
+++ b/_config.yml
@@ -20,3 +20,9 @@ collections:
     defaults:
       values:
         layout: frame
+  ideas:
+    output: true
+    permalink: /:path/
+    defaults:
+      values:
+        layout: ideas
